--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light ">
         <div class="container-fluid">
-         <h1 id="top" class="navbar-brand" >the campfire</h1>
+         <h1 id="top" class="navbar-brand" >Food, LLC</h1>
         <button class="navbar-toggler" type="button"
         data-toggle="collapse" data-target="#datan"
         aria-controls="datan"
